[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/enemy_body.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/enemy_turret.png" type="Texture" id=3]
[ext_resource path="res://actors/EnemyTank.gd" type="Script" id=4]
[ext_resource path="res://bullets/EnemyTankBullet.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 7.07107

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[node name="EnemyTank" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 247
input_pickable = true
script = ExtResource( 4 )
Bullet = ExtResource( 5 )
speed = 30
gun_cooldown = 0.5
max_health = 50
turret_speed = 1.0
detect_radius = 100

[node name="Body" parent="." index="0"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
visible = false
shape = SubResource( 1 )

[node name="Turret" parent="." index="3"]
texture = ExtResource( 3 )

[node name="Muzzle" parent="Turret" index="0"]
visible = false
position = Vector2( 8, 0 )

[node name="DetectRadius" type="Area2D" parent="." index="5"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]
shape = SubResource( 2 )

[node name="StuckTimer" type="Timer" parent="." index="6"]
autostart = true

[node name="HealthBar" type="ColorRect" parent="." index="8"]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = -7.0
color = Color( 0, 0, 0, 1 )

[connection signal="input_event" from="." to="." method="_on_EnemyTank_input_event"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="timeout" from="StuckTimer" to="." method="_on_StuckTimer_timeout"]
